@@ -187,11 +187,15 @@ class TestClient(unittest.TestCase):
 
         context = kodion.Context()
 
-        # FLASH?
-        streams = client.get_video_streams(context, 'B3eAMGXFw1o')
-        streams = client.get_video_streams(context, 'zyg0WUsY9HI')
+        # ranadom stuff
+        #streams = client.get_video_streams(context, 'zyg0WUsY9HI')
+
+        # Exception: Sign in to confirm your age
+        #streams = client.get_video_streams(context, 'B3eAMGXFw1o')
 
         # VEVO
+        streams = client.get_video_streams(context, 'a3ir9HC9vYg')
+
         streams = client.get_video_streams(context, 'nfWlot6h_JM')
         self.assertGreater(len(streams), 0)
 
