@@ -1,4 +1,5 @@
 5.1.8~beta1 (2015-08-22)
+[fix] playback of VEVO videos - some videos still using discontinued ITAG13
 
 5.1.7 (2015-07-15)
 ADD: quota optimization via separate key for none-token depended API calls
